--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
